--- a/css/styles.css
+++ b/css/styles.css
@@ -79,27 +79,28 @@ body {
             font-weight: 300;
             margin: 5px 0;
         }
-        button{
-            background-color: rgb(0, 0, 0);
-            cursor: pointer;
-            border: 0;
-            /* height: 1.5rem; */
-            /* width: 8rem; */
-            border-radius: 10px;
-            padding: 5px;
-            font-weight: bold;
-            font-family: "Roboto", sans-serif;
-            font-weight: 400;
-            color: white;
-            margin-top: auto;
-            &:hover{
-                background-color: rgba(0, 0, 0, 0.473);
-                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.548);
-            }
-        }
+        
     }
 }
 
+.botonAdd{
+    background-color: rgb(0, 0, 0);
+    cursor: pointer;
+    border: 0;
+    /* height: 1.5rem; */
+    /* width: 8rem; */
+    border-radius: 10px;
+    padding: 5px;
+    font-weight: bold;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: white;
+    margin-top: auto;
+    &:hover{
+        background-color: rgba(0, 0, 0, 0.473);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.548);
+    }
+}
 /* Carrito de compras, componentes del offcanvas */
 .carrito{
     .carrito-item{
